chore: fix minor code quality issues from Task 3 review